crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__repl_command_tests__rewind_tests__rewind_after_2.snap
---
source: crates/crucible-cli/src/tui/testing/repl_command_tests.rs
expression: h.render()
---
                                                                                
 > What is Crucible?                                                            
                                                                                
 ● Crucible is a knowledge management system that combines wikilinks with AI.   
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
