crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__repl_command_tests__rewind_tests__rewind_all_empty.snap
---
source: crates/crucible-cli/src/tui/testing/repl_command_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
